# Arm-Motion-Planning

./: CMakeLists.txt  README.md
arm_move/: CMakeLists.txt  README.md  package.xml
arm_move/config/: waypoints.yaml
arm_move/launch/: arm.launch  arm.test
arm_move/nodes/: mover
arm_move/srv/: Step.srv
arm_move/test/: arm.test  arm_test
diff_drive/: CMakeLists.txt  README.md  package.xml
diff_drive/config/: ddrive.yaml
diff_drive/launch/: ddrive.launch  ddrive_rviz.launch
diff_drive/nodes/: flip_over  follow_rect
diff_drive/rviz/: ddrive.rviz
diff_drive/urdf/: ddrive.gazebo.xacro  ddrive.urdf.xacro
diff_drive/worlds/: ddrive.world
nodes/: mover.py
test/: arm_test
