<?xml version="1.0"?>
<package format="2">
  <name>arm_move</name>
  <version>0.0.1</version>
  <description>creates a planning scene and performs some path planning tasks</description>

  <maintainer email="yael.bshalom@gmail.com">yael Ben Shalom</maintainer>
  <author email="yael.bshalom@gmail.com">yael Ben Shalom</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>interbotix_moveit</exec_depend>
  <exec_depend>interbotix_moveit_interface</exec_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
